shaneworld/force-app/main/default/objects/YuGiOh_Card__c/YuGiOh_Card__c.object-meta.xml
<CustomObject>
    <label>YuGiOh Card</label>
    <nameField>
        <label>YuGiOh Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YuGiOh Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>