shaneworld/force-app/main/default/objects/YuGiOh_Card__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <length>10</length>
    <type>Text</type>
</CustomField>