shaneworld/force-app/main/default/objects/YuGiOh_Card__c/fields/Card_Frame__c.field-meta.xml
<CustomField>
    <fullName>Card_Frame__c</fullName>
    <label>Card Frame</label>
    <length>30</length>
    <type>Text</type>
</CustomField>