shaneworld/force-app/main/default/objects/YuGiOh_Card__c/fields/Monster_Type__c.field-meta.xml
<CustomField>
    <fullName>Monster_Type__c</fullName>
    <label>Monster Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>