shaneworld/force-app/main/default/objects/YuGiOh_Card__c/fields/Primary_Image__c.field-meta.xml
<CustomField>
    <fullName>Primary_Image__c</fullName>
    <label>Primary Image</label>
    <type>Url</type>
</CustomField>